feat: add folder controllers and swagger
