# routers/user.route.js
@@ -1,11 +1,21 @@
-
 // const {registerValidator} = require("../validation/validation") //потом подключим (Папка готова)
 const { Router } = require("express");
 const { userController } = require("../controllers/user.controller");
 const router = Router();
+const { auth } = require("../middlewares/checkAuth.js");
 
-router.post("/auth",  userController.registerUser); // Роут регистрации пользователя
-router.post("/login",   userController.login); // Вход в учетную запись
-// router.get("/getMe", userController.getMe)
-router.patch("/patchUser/:id",  userController.patchUser)//Роут для редактирования профиля
+// Роут регистрации пользователя
+router.post("/auth", userController.registerUser);
+
+// Вход в учетную запись
+router.post("/login", userController.login);
+
+//Получить свои данные
+router.get("/getMe", auth, userController.getMe);
+
+//Роут для редактирования профиля
+router.patch("/patchUser/:id", userController.patchUser);
+
 module.exports = router;
+
+("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1NWE1NDFmYzc1NWM5ZDllZDUzYTkyZiIsImVtYWlsIjoiZGVuaUBtYWlsLnJ1IiwiaWF0IjoxNzAxMDkxMzE5LCJleHAiOjE3MDEzNTA1MTl9.ji6Gy6YDoWXgxOLQw3_JFvRcK2Dk4ZV9kuYwA4as8wo");
